--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -16,3 +16,8 @@
 @import 'blocks/product-card';
 @import 'blocks/btn';
 @import 'blocks/collection';
+@import 'blocks/footer';
+@import 'blocks/site-menu';
+@import 'blocks/footer-banner';
+@import 'blocks/banner-title';
+@import 'blocks/socials';
