--- a/source/template/sections/collection.pug
+++ b/source/template/sections/collection.pug
@@ -2,14 +2,14 @@ section.collections
     .container
         ul.collections__list
             li.collections__item.collections__item_type_guys
-                a.collections__link(href='#')
+                .collections__link
                     h2.collections__title Мужская коллекция
                     .collections__desc
                         | Оригинальные, шуточные, полезные и мужественные футболки.
-                    .btn просмотреть
+                    a(href="#").btn просмотреть
             li.collections__item.collections__item_type_girls
-                a.collections__link(href='#')
+                .collections__link
                     h2.collections__title Женская коллекция
                     .collections__desc
                         | Подари своей девушке прикольную футболку с надписями, и ты подаришь ей, как минимум, еще одну улыбку.
-                    .btn просмотреть
+                    a(href="#").btn просмотреть
