--- a/source/template/sections/footer-banner.pug
+++ b/source/template/sections/footer-banner.pug
@@ -1,25 +1,24 @@
-section.extras
-    .extras__col
-        a.extras__best(href='#')
+section.footer-banner
+    .footer-banner__col
+        a.banner-title(href='#')
             | Лучшие принты 
             br
             |               2019 года
-    .extras__col
-        .extras__col-socials
-            ul.socials
-                li.socials__item
-                    a.socials__link(href='#')
-                        svg.socials__icon
-                            use(xlink:href='./img/icons-sprite.svg#fb')
-                li.socials__item
-                    a.socials__link(href='#')
-                        svg.socials__icon
-                            use(xlink:href='./img/icons-sprite.svg#twitter')
-                li.socials__item
-                    a.socials__link(href='#')
-                        svg.socials__icon
-                            use(xlink:href='./img/icons-sprite.svg#insta')
-                li.socials__item
-                    a.socials__link(href='#')
-                        svg.socials__icon
-                            use(xlink:href='./img/icons-sprite.svg#pin')
+    .footer-banner__col.footer-banner__col_theme_sosial
+        ul.socials
+            li.socials__item
+                a.socials__link(href='#')
+                    svg.socials__icon
+                        use(xlink:href='./assets/img/icons-sprite.svg#fb')
+            li.socials__item
+                a.socials__link(href='#')
+                    svg.socials__icon
+                        use(xlink:href='./assets/img/icons-sprite.svg#twitter')
+            li.socials__item
+                a.socials__link(href='#')
+                    svg.socials__icon
+                        use(xlink:href='./assets/img/icons-sprite.svg#insta')
+            li.socials__item
+                a.socials__link(href='#')
+                    svg.socials__icon
+                        use(xlink:href='./assets/img/icons-sprite.svg#pin')
