--- a/source/template/sections/footer.pug
+++ b/source/template/sections/footer.pug
@@ -44,11 +44,12 @@ footer.footer
                 li.site-menu__col
                     h3.site-menu__title Контактная информация
                     .site-menu__text
-                        | Санкт-Петербург, 
+                        |Санкт-Петербург, 
                         br
-                        |                   ул. Жуковского, д. 12
+                        |ул. Жуковского, д. 12
                     .site-menu__text
                         a.site-menu__text-row(href='tel.:+78123157235')
                             | Телефон: 8 (812) 315-72-35
                         a.site-menu__text-row(href='mailto:support@yourwebsite.com')
                             | Email: support@yourwebsite.com
+        include footer-banner
