--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -5,6 +5,6 @@ block variables
 
 block content
   include ../sections/hero
-  
   include ../sections/products
   include ../sections/collection
+  include ../sections/footer
