Добавлена фильтрация и появление меню

--- a/source/style/blocks/sidebar.scss
+++ b/source/style/blocks/sidebar.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     transition: width .3s;
 
-    &--opened {
+    &_opened {
         width: 325px;
         padding: 0 3% 0 4%;
     }
