--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -19,4 +19,5 @@ html
   body
     .wrapper
       block content
+    script(src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js")
     script(src="./assets/js/app.js")
