--- a/source/style/blocks/collection.scss
+++ b/source/style/blocks/collection.scss
@@ -27,11 +27,11 @@
   }
   
   .collections__item_type_guys:before {
-    background-image: url('/assets/img/collections/collection_man.png');
+    background-image: url('../img/collections/collection_man.png');
   }
   
   .collections__item_type_girls:before {
-    background-image: url('/assets/img/collections/collection_woman.png');
+    background-image: url('../img/collections/collection_woman.png');
     top: -31%;
     width: 80%;
     left: -25%;
