--- a/source/style/blocks/footer-banner.scss
+++ b/source/style/blocks/footer-banner.scss
@@ -12,7 +12,7 @@
     margin-right: 0px;
   }
   .footer-banner__col_theme_sosial {
-    background: url('/assets/img/bg/pattern.png') center center / 500px;
+    background: url('../img/bg/pattern.png') center center / 500px;
     display: flex;
     align-items: center;
     justify-content: center;
