--- a/source/style/blocks/hero.scss
+++ b/source/style/blocks/hero.scss
@@ -1,7 +1,7 @@
 .hero {
     height: 100vh;
     min-height: 650px;
-    background-image: url('/assets/img/bg/hero.jpg');
+    background-image: url('../img/bg/hero.jpg');
     background-position: center;
     background-size: cover;
     position: relative;
