--- a/source/template/sections/hero.pug
+++ b/source/template/sections/hero.pug
@@ -2,7 +2,7 @@ section.hero
   .container
     header.header
       a.logo(href='#')
-        img.logo__pic(src='../assets/img/content/logos/logo-main.png', alt='lost shirt logo')
+        img.logo__pic(src='./assets/img/content/logos/logo-main.png', alt='lost shirt logo')
       a.mail(href='mailto:lostinspace@mail.ru')
         .mail__title По всем вопросам пишите на:
         .mail__content lostinspace@mail.ru
@@ -37,13 +37,13 @@ section.hero
   aside.sidebar
     a.sidebar__hamburger(href='#')
       svg.sidebar__hamburger-icon
-        use(xlink:href='../assets/img/icons-sprite.svg#bars')
+        use(xlink:href='./assets/img/icons-sprite.svg#bars')
     .sidebar__header
       a.logo(href='#')
-        img.logo__image(src='../assets/img/content/logos/logo-main.png', alt='')
+        img.logo__image(src='./assets/img/content/logos/logo-main.png', alt='')
       a.sidebar__close(href='#')
         svg.sidebar__close-icon
-          use(xlink:href='../assets/img/icons-sprite.svg#cross')
+          use(xlink:href='./assets/img/icons-sprite.svg#cross')
     nav.side-menu.sidebar__menu
       ul.side-menu__list
         li.side-menu__item
