--- a/source/style/blocks/collection.scss
+++ b/source/style/blocks/collection.scss
@@ -11,7 +11,7 @@
     flex: 1;
     overflow: hidden;
     margin-right: 30px;
-    background: url('/assets/img/bg/pattern.png') center center / 500px;
+    background: url('../img/bg/pattern.png') center center / 500px;
     position: relative;
   }
   
